--- a/app/src/main/res/layout/adapter_projeto.xml
+++ b/app/src/main/res/layout/adapter_projeto.xml
@@ -4,24 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="10dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:elevation="20dp"
+        android:padding="10dp">
 
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:button="@drawable/icon_checkbox"
             tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/textFuroName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Furo N" />
+            android:text="SP01 FURO"
+            android:textSize="15sp"
+            android:visibility="visible" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
