--- a/app/src/main/res/values/style_Light.xml
+++ b/app/src/main/res/values/style_Light.xml
@@ -48,6 +48,11 @@
         <item name="android:textSize">14dp</item>
 
 </style>
+    <style name="Checkbox_light" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="buttonTint">@color/destaque</item>
 
+
+
+    </style>
 
 </resources>
