--- a/app/src/main/res/layout/fragment_furo.xml
+++ b/app/src/main/res/layout/fragment_furo.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Substituir Nome do Furo"
+        android:text="Substituir Nome do Furo "
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +29,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Os dados apresentados podem ser editados"
         android:textColor="#FF0101"
         app:layout_constraintEnd_toEndOf="@+id/textAmostra"
         app:layout_constraintStart_toStartOf="@+id/textAmostra"
