Todos e revisão da action

--- a/app/src/main/res/navigation/spt_nav_graph.xml
+++ b/app/src/main/res/navigation/spt_nav_graph.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_edit_Furo"
             app:destination="@id/furoFragment" />
+        <action
+            android:id="@+id/action_new_Furo"
+            app:destination="@id/carimboEnsaioFragment" />
     </fragment>
     <fragment
         android:id="@+id/carimboEnsaioFragment"
