--- a/app/src/main/res/layout/adapter_carimbo_projeto.xml
+++ b/app/src/main/res/layout/adapter_carimbo_projeto.xml
@@ -18,6 +18,7 @@
 
             android:hint="substitua hint"
 
+
             app:errorEnabled="true"
             app:errorIconDrawable="@drawable/ic_erro"
             app:helperText="substitua observação"
@@ -28,7 +29,7 @@
                 android:id="@+id/textInputEditTextNameProjeto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textAutoComplete" />
+                android:inputType="number" />
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
