--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
 
     <!-- Paleta de cores do aplicativo. -->
-    <color name="destaque">#FB0035</color>
-    <color name="color_primary">#042741</color>
-    <color name="fundo">#EAEAEA</color>
+    <color name="color_primary_light">#042741</color>
+    <color name="color_primary_dark">#FB0035</color>
+
+    <color name="fundo_light">#EAEAEA</color>
     <color name="accent">#BDE3FF</color>
 
 
@@ -14,7 +15,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="fundo_dark">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="hint">#60000000</color>
 </resources>
