--- a/app/src/main/res/values/style_light.xml
+++ b/app/src/main/res/values/style_light.xml
@@ -5,7 +5,7 @@
     <style name="ButtonPadrao_light" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14dp</item>
-        <item name="backgroundTint">@color/color_primary</item>
+        <item name="backgroundTint">@color/color_primary_light</item>
         <item name="cornerRadius">10dp</item>
         <item name="android:elevation">20dp</item>
         <item name="android:padding">10dp</item>
@@ -16,7 +16,7 @@
     <!--- ImageButton padrão do app. -->
     <style name="ImageButton_light" parent="Widget.AppCompat.ImageButton">
         <item name="backgroundTint">#00042741</item>
-        <item name="tint">@color/color_primary</item>
+        <item name="tint">@color/color_primary_light</item>
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
     </style>
@@ -26,33 +26,34 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:colorAccent">@color/accent</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/fundo_dark</item>
         <item name="android:textSize">14dp</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:padding">10dp</item>
         <item name ="android:background">@drawable/style_edit_text_light</item>
     </style>
 
-
+    <!-- Imputlayout Padrão do app Light-->
 
     <style name="ImputLight" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:colorAccent">@color/accent</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="startIconTint">@color/color_primary</item>
-        <item name="errorIconTint">@color/destaque</item>
+        <item name="android:textColor">@color/fundo_dark</item>
+        <item name="startIconTint">@color/color_primary_light</item>
+        <item name="errorIconTint">@color/color_primary_dark</item>
         <item name="startIconScaleType">centerInside</item>
-        <item name="helperTextTextColor">@color/destaque</item>
+        <item name="helperTextTextColor">@color/color_primary_dark</item>
         <item name="endIconMode">clear_text</item>
         <item name="android:textSize">14dp</item>
 
-</style>
+    </style>
     <style name="Checkbox_light" parent="Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="buttonTint">@color/destaque</item>
-
-
-
+        <item name="buttonTint">@color/color_primary_dark</item>
     </style>
 
+    <style name="Tollbar_light" parent="Widget.MaterialComponents.Toolbar">
+    <item name="android:background">@color/color_primary_light</item>
+    <item name="android:textColorPrimary">@color/white</item>
+    </style>
 </resources>
