--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,36 +4,37 @@
 
         <!-- Primary color and color secondary. -->
 
-        <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorSecondary">@color/color_primary</item>
+        <item name="colorPrimary">@color/color_primary_light</item>
+        <item name="colorPrimaryDark">@color/color_primary_light</item>
+        <item name="navigationIconTint">@color/white</item>
 
+        <item name="colorSecondary">@color/color_primary_light</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/color_primary</item>
 
         <!-- fundo-->
-        <item name="colorOnSecondary">@color/fundo</item>
+        <item name="colorOnSecondary">@color/fundo_light</item>
         <item name="android:textColorHint">@color/hint</item>
 
 
         <!-- Color de interação com butões -->
-        <item name="colorAccent">@color/accent</item>
-        <item name="colorSurface">@color/fundo</item>
+        <item name="colorAccent">#FFFFFF</item>
+        <item name="colorSurface">@color/fundo_light</item>
         <item name="colorError">#B00020</item>
-        <item name="tint">@color/color_primary</item>
+        <item name="tint">@color/color_primary_light</item>
 
         <item name="checkboxStyle">@style/Checkbox_light</item>
 
         <!-- Estilos de textos. -->
         <item name="textInputStyle">@style/ImputLight</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="actionMenuTextColor">@color/fundo</item>
+        <item name="android:textColor">@color/fundo_dark</item>
+        <item name="toolbarStyle">@style/Tollbar_light</item>
 
         <!-- Estilos gerais padrão do tema light. -->
         <item name="materialButtonStyle">@style/ButtonPadrao_light</item>
         <item name="imageButtonStyle">@style/ImageButton_light</item>
         <item name="editTextStyle">@style/Edit_Text_light</item>
-        <item name="iconTint">@color/color_primary</item>
+        <item name="iconTint">@color/color_primary_light</item>
+
 
 
 
