--- a/app/src/main/res/layout/fragment_carimbo_ensaio.xml
+++ b/app/src/main/res/layout/fragment_carimbo_ensaio.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/TxtCarimboUnicoDataInicio"
+                android:text="@string/registration_data_inicio_hint"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -39,7 +39,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
-                android:hint="@string/TxtCarimboUnicoHint"
+                android:hint="@string/btn_start_furo"
                 android:inputType="date|datetime"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="@string/TxtCarimboUnicoNivelFuro"
+                android:text="@string/registration_nivel_furo"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -77,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="@string/TxtCarimboUnicoCoordenadaFuro"
+                android:text="@string/title_button_Coordenadas_furo"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:drawableLeft="@drawable/icon_pin"
-                android:text="@string/TxtBotaoLocalizacao"
+                android:text="@string/btn_capturar_location"
                 app:layout_constraintEnd_toEndOf="@+id/textCoordenadasFuro"
                 app:layout_constraintStart_toStartOf="@+id/textCoordenadasFuro"
                 app:layout_constraintTop_toBottomOf="@+id/textCoordenadasFuro" />
