--- a/app/src/main/res/layout/fragment_carimbo_projeto.xml
+++ b/app/src/main/res/layout/fragment_carimbo_projeto.xml
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:drawableLeft="@drawable/icon_pin"
-                    android:text="@string/TxtBotaoLocalizacao"
+                    android:text="@string/btn_capturar_location"
                     app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                     app:layout_constraintStart_toStartOf="@+id/recyclerCarimboProjeto"
                     app:layout_constraintTop_toBottomOf="@+id/recyclerCarimboProjeto" />
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
 
                     android:layout_marginTop="40dp"
-                    android:text="@string/msg_carimboautomátizado"
+                    android:text="@string/msg_carimbo_automátizado"
                     android:textAlignment="center"
                     android:textColor="@color/color_primary_dark"
                     android:textSize="12sp"
