--- a/app/src/main/res/layout/acitivity_spt.xml
+++ b/app/src/main/res/layout/acitivity_spt.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:text="Navegar"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
