--- a/app/src/main/res/layout/fragment_carimbo_projeto.xml
+++ b/app/src/main/res/layout/fragment_carimbo_projeto.xml
@@ -11,6 +11,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +37,7 @@
                     android:id="@+id/buttonGetLocation2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:drawableLeft="@drawable/icon_pin"
                     android:text="@string/btn_capturar_location"
                     app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
@@ -47,7 +49,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="30dp"
                     android:text="@string/msg_carimbo_automátizado"
                     android:textAlignment="center"
                     android:textColor="@color/color_primary_dark"
@@ -60,7 +62,7 @@
                     android:id="@+id/imageProfile"
                     android:layout_width="120dp"
                     android:layout_height="110dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:src="@drawable/icon_profile"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +86,7 @@
                     android:id="@+id/imageButtonPhoto"
                     android:layout_width="40dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                     app:layout_constraintStart_toStartOf="@+id/imageProfile"
                     app:layout_constraintTop_toBottomOf="@+id/imageProfile"
