--- a/app/src/main/res/drawable/icon_arrow_left.xml
+++ b/app/src/main/res/drawable/icon_arrow_left.xml
@@ -1,11 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="31dp"
-    android:height="25dp"
-    android:viewportWidth="31"
-    android:viewportHeight="25">
-  <path
-      android:pathData="M13,1L2,12.5M2,12.5L13,24M2,12.5H31"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#FB0035"/>
+<vector android:height="24dp" android:viewportHeight="32"
+    android:viewportWidth="32" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M13,26a1,1 0,0 1,-0.71 -0.29l-9,-9a1,1 0,0 1,0 -1.42l9,-9a1,1 0,1 1,1.42 1.42L5.41,16l8.3,8.29a1,1 0,0 1,0 1.42A1,1 0,0 1,13 26Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M28,17H4a1,1 0,0 1,0 -2H28a1,1 0,0 1,0 2Z"/>
 </vector>
