Atualizações nos models e transferência CarimboProjetoFragment

--- a/app/src/main/res/layout/adapter_home_projetos.xml
+++ b/app/src/main/res/layout/adapter_home_projetos.xml
@@ -52,7 +52,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="-5dp"
             android:layout_toEndOf="@id/imageLogoProject"
-            android:text="Descrição do projeto localização" />
+            android:text="POR FAVOR REMOVA ESSE TEXT VIEW NÂO SERÁ USADO MAIS" />
 
         <TextView
             android:id="@+id/textDateProjeto"
