--- a/app/src/main/res/menu/menu_spt.xml
+++ b/app/src/main/res/menu/menu_spt.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-    android:id="@+id/addfuro"
-    android:orderInCategory="100"
-    android:title="novo furo"
-    android:icon="@drawable/ic_add"
-
+        android:id="@+id/addfuro"
+        android:orderInCategory="100"
+        android:title="@string/menu_item_projetospt_novo_furo"
+        android:icon="@drawable/ic_add"
         />
-
     <item
         android:id="@+id/deletefuro"
         android:orderInCategory="100"
-        android:title="Apagar furo"
+        android:title="@string/menu_item_projetospt_apagar_furo"
         android:icon="@android:drawable/ic_menu_delete"
         />
     <item
@@ -19,7 +17,6 @@
         android:orderInCategory="100"
         android:title="Ajuda"
         android:icon="@android:drawable/ic_menu_info_details"
-
         />
 
 </menu>
