Adicionado o Scrow View nas telas de Peneiras
Foi adicionado o Scrow View nas telas de peneiras e de dados do graudo e miudo.

--- a/app/src/main/res/layout/fragment_peneiras_miudo.xml
+++ b/app/src/main/res/layout/fragment_peneiras_miudo.xml
@@ -10,96 +10,113 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Selecione as peneiras:"
-            android:textSize="20sp"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="24dp"
-            android:text="Normais"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="40dp"
-            android:text="Intermediárias"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                <CheckBox
+                    android:id="@+id/checkBox23"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="1,2 mm"
+                    app:layout_constraintEnd_toEndOf="@+id/checkBox20"
+                    app:layout_constraintStart_toStartOf="@+id/checkBox20"
+                    app:layout_constraintTop_toBottomOf="@+id/checkBox20" />
 
-        <CheckBox
-            android:id="@+id/checkBox19"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="4,8 mm"
-            app:layout_constraintEnd_toEndOf="@+id/textView6"
-            app:layout_constraintStart_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                <CheckBox
+                    android:id="@+id/checkBox20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="2,4 mm"
+                    app:layout_constraintEnd_toEndOf="@+id/checkBox19"
+                    app:layout_constraintStart_toStartOf="@+id/checkBox19"
+                    app:layout_constraintTop_toBottomOf="@+id/checkBox19" />
 
-        <CheckBox
-            android:id="@+id/checkBox20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="2,4 mm"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox19"
-            app:layout_constraintStart_toStartOf="@+id/checkBox19"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox19" />
+                <CheckBox
+                    android:id="@+id/checkBox19"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="4,8 mm"
+                    app:layout_constraintEnd_toEndOf="@+id/textView6"
+                    app:layout_constraintStart_toStartOf="@+id/textView6"
+                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-        <CheckBox
-            android:id="@+id/checkBox23"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="1,2 mm"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox20"
-            app:layout_constraintStart_toStartOf="@+id/checkBox20"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox20" />
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Selecione as peneiras:"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <CheckBox
-            android:id="@+id/checkBox22"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="0,6 mm"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox23"
-            app:layout_constraintStart_toStartOf="@+id/checkBox23"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox23" />
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="40dp"
+                    android:text="Intermediárias"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-        <CheckBox
-            android:id="@+id/checkBox18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="0,3 mm"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox22"
-            app:layout_constraintStart_toStartOf="@+id/checkBox22"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox22" />
+                <CheckBox
+                    android:id="@+id/checkBox21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="0,15 mm"
+                    app:layout_constraintStart_toStartOf="@+id/checkBox18"
+                    app:layout_constraintTop_toBottomOf="@+id/checkBox18" />
 
-        <CheckBox
-            android:id="@+id/checkBox21"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="0,15 mm"
-            app:layout_constraintStart_toStartOf="@+id/checkBox18"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox18" />
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Normais"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+                <CheckBox
+                    android:id="@+id/checkBox18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="0,3 mm"
+                    app:layout_constraintEnd_toEndOf="@+id/checkBox22"
+                    app:layout_constraintStart_toStartOf="@+id/checkBox22"
+                    app:layout_constraintTop_toBottomOf="@+id/checkBox22" />
+
+                <CheckBox
+                    android:id="@+id/checkBox22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="0,6 mm"
+                    app:layout_constraintEnd_toEndOf="@+id/checkBox23"
+                    app:layout_constraintStart_toStartOf="@+id/checkBox23"
+                    app:layout_constraintTop_toBottomOf="@+id/checkBox23" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
