--- a/app/src/main/res/navigation/granulometria_nav_graph.xml
+++ b/app/src/main/res/navigation/granulometria_nav_graph.xml
@@ -10,19 +10,19 @@
         android:label="fragment_home_agregado"
         tools:layout="@layout/fragment_home_agregado" />
     <fragment
-        android:id="@+id/dadosGraudo"
-        android:label="fragment_dados_graudo"
-        tools:layout="@layout/fragment_dados_graudo" />
-    <fragment
         android:id="@+id/peneirasGraudo"
         android:label="fragment_peneiras_graudo"
         tools:layout="@layout/fragment_peneiras_graudo" />
     <fragment
-        android:id="@+id/dadosMiudo"
-        android:label="fragment_dados_miudo"
-        tools:layout="@layout/fragment_dados_miudo" />
-    <fragment
         android:id="@+id/peneirasMiudo"
         android:label="fragment_peneiras_miudo"
         tools:layout="@layout/fragment_peneiras_miudo" />
+    <fragment
+        android:id="@+id/dadosAgregados"
+        android:label="fragment_dados_agregados"
+        tools:layout="@layout/fragment_dados_agregados" />
+    <fragment
+        android:id="@+id/identificarAgregados"
+        android:label="fragment_identificar_agregados"
+        tools:layout="@layout/fragment_identificar_agregados" />
 </navigation>
