alterado de number para number decimal no nivel do furo

--- a/app/src/main/res/layout/fragment_carimbo_ensaio.xml
+++ b/app/src/main/res/layout/fragment_carimbo_ensaio.xml
@@ -67,7 +67,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
